# TDD_project_DIO

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
store/: .env  main.py
store/core/: config.py
store/db/: mongo.py
tests/: conf_test.py
