[tool.poetry]
name = "tdd-project"
version = "0.0.1"
description = ""
authors = ["BrunoPinheirofe <bruno2013pinheiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
motor = "^3.5.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[tool.taskipy.tasks]
run = 'fastapi dev store/main.py'
precommit_install = 'poetry run pre-commit install'
test = 'poetry run pytest'

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
